# EndoLoop

./: README.md  dcc_skill.py  pyproject.toml
docs/: ARCHITECTURE.md
endloop/: __init__.py  agent.py  core.py  memory.py  prompts.py  tools.py
examples/: stress_test.py
skills/endloop/: SKILL.md
tests/: test_core.py
