[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endloop"
version = "0.1.0"
description = "State-Driven Cognition System for autonomous AI loops"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0"
]
